--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
-<html>
+<!DOCTYPE html>
     <head>
-        <title>About Me</title>
+        <meta charset="utf-8">
+        <title>
+            CSE 110 Lab 2
+        </title>
+        <link rel="blank" href="blank.css">
     </head>
-
+    <body>
+        <main>
+            <h1>About Me</h1>
+            My name is <strong>Haaris Waleh</strong>. I am a 3rd year Computer Science Major at <i>UCSD.</i>
+        </main>
+    </body>
 </html>
