--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             </pre>
             <a href=https://www.youtube.com>
-                just a link to youtube
+                just a link to youtube <br>
               </a>
            Here is a list of famous programmers/ tech experts who I aspire to be like:
            <ul>
@@ -57,11 +57,17 @@
                 <figcaption>all this for 30 wpm smh</figcaption>
             </figure>
             
-            <iframe></iframe>
+            <iframe>
+                title="just ye being ye" src="https://twitter.com/kanyewest/status/1323640310321176577">
+            </iframe>
 
         </main>>
         <section>
-            <footer></footer>
+            <footer>cool circle
+                <svg viewBox="0 0 10 10" x="200" width="100">
+                    <circle cx="6" cy="6" r="5" />
+                  </svg>
+            </footer>
         </section>
         <aside>
             <nav></nav>
