--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
             </figure>
             
             <iframe>
-                title="just ye being ye" src="https://twitter.com/kanyewest/status/1323640310321176577">
+                title="just ye being ye" href="https://twitter.com/kanyewest/status/1323640310321176577">
             </iframe>
 
         </main>>
         <section>
             <footer>cool circle
-                <svg viewBox="0 0 10 10" x="200" width="100">
+                <svg viewBox="0 0 10 10" x="200" width="200">
                     <circle cx="6" cy="6" r="5" />
                   </svg>
             </footer>
