--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </figure>
             
             <iframe>
-                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">I channel Will Ferrel when I’m at the daddy daughter dances</p>&mdash; ye (@kanyewest) <a href="https://twitter.com/kanyewest/status/1323640310321176577?ref_src=twsrc%5Etfw">November 3, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                title="Wikipedia page for Avocados" src="https://en.wikipedia.org/wiki/Avocado">
             </iframe>
 
         </main>>
