--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <figcaption>all this for 30 wpm smh</figcaption>
             </figure>
             
-            <iframe> title="Wikipedia page for Avocados" src="https://en.wikipedia.org/wiki/Avocado"></iframe>
+            <iframe src="https://www.w3schools.com" title="W3Schools Free Online Web Tutorials"></iframe>
 
         </main>>
         <section>
