--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
                 </audio>
             </figure>
 
+
+            <video controls width="250">
+
+                <source src="GREEN_SCREEN_ANIMALS__ALPACA.mov"
+                        type="video/mov">
+            </video>
+            
         </main>>
         <section>
             <footer>cool circle
