--- a/index.html
+++ b/index.html
@@ -86,11 +86,9 @@
                     <circle cx="6" cy="6" r="4" />
                   </svg>
             </footer>
-            <form action="" method="get" class="form-example">
-                <div class="form-example">
-                  <label for="name">Enter your name: </label>
-                  <input type="text" name="name" id="name" required>
-                </div>
+            <form>
+                <label for="fname">First name:</label><br>
+                <input type="text" id="fname" name="fname"><br>
             </form>
         </section>
         <aside>
