--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                   </svg>
             </footer>
             <form>
-                <label for="fname">First name:</label><br>
-                <input type="text" id="fname" name="fname"><br>
+                <label for="fname">Enter text:</label><br>
+                <input type="text" id="text" name="text"><br>
             </form>
         </section>
         <aside>
