--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
 
             <canvas id="myCanvas" width="200" height="100"></canvas>
 
+            <select>
+                <optgroup label="options">
+                  <option>a</option>
+                  <option>b</option>
+                  <option>c</option>
+                </optgroup>
+            </select>
+
         </main>>
         <section>
             <footer>cool circle
