--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <label for="opts">Choose:</label>
             <select  name="opts" id="opts">
                 <optgroup label="opts">
-                    <option value="a">Volvo</option>
-                    <option value="b">Saab</option>
+                    <option value="a">a</option>
+                    <option value="b">b</option>
                 </optgroup>
             </select>
 
