--- a/index.html
+++ b/index.html
@@ -118,11 +118,25 @@
         <aside>
             inputs
             <nav>
-                <form action="/action_page.php">
+                <form action="/inputs.php">
                     <label for="button">button:</label>
                     <input type="button" id="button" name="button"><br><br>
-
-
+                    <label for="checkbox">checkb:</label>
+                    <input type="checkbox" id="checkbox" name="checkbox"><br><br>
+                    <label for="color">color:</label>
+                    <input type="color" id="color" name="color"><br><br>
+                    <label for="data">date:</label>
+                    <input type="date" id="date" name="date"><br><br>
+                    <label for="email">email:</label>
+                    <input type="email" id="email" name="email"><br><br>
+                    <label for="file">file:</label>
+                    <input type="file" id="file" name="file"><br><br>
+                    <label for="month">month:</label>
+                    <input type="month" id="month" name="month"><br><br>
+                    <label for="password">password:</label>
+                    <input type="password" id="password" name="password"><br><br>
+                    <label for="range">range:</label>
+                    <input type="range" id="range" name="range"><br><br>
                 </form>
             </nav>
         </aside>
