--- a/index.html
+++ b/index.html
@@ -103,10 +103,21 @@
                 </fieldset>
             </form>
 
-            <label for="w3review">Review of W3Schools:</label>
+            <label for="textarea">Textarea?:</label>
             <textarea id="textarea" name="textarea" rows="4" cols="20">
                 now this is epic
             </textarea>
+
+            <label for="num">pick ur fave num:</label>
+            <input list="num" id="num" name="num" />
+
+            <datalist id="num">
+                <option value="1">
+                <option value="2">
+                <option value="3">
+                <option value="other">
+            </datalist>
+
 
         </main>>
         <section>
