--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
                 now this is epic
             </textarea>
             <br>
-            <label for="num">pick ur fave num:</label>
-            <input list="nums" id="nums" name="num" />
+            <label for="nums">pick ur fave num:</label>
+            <input list="numbs" id="nums" name="nums" />
             <br>
-            <datalist id="nums">
+            <datalist id="numbs">
                 <option value="1">
                 <option value="2">
                 <option value="3">
@@ -145,8 +145,8 @@
             <template>
                 <h2>type again</h2>
                 <img src="typing.jpg" width="115" height="105">
-              </template>
-
+            </template>
+            <br>
 
         </main>>
         <section>
