--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <br>
             <template>
                 <h2>type again</h2>
-                <img src="typing.jpg" width="115" height="105">
+                <img src=typing.jpg width="115" height="105">
             </template>
             <br>
 
