--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
             CSE 110 Lab 2
         </title>
         <link rel="blank" href="blank.css">
+        <style>
+            body {
+                background-color: indigo;
+            }
+        </style>
     </head>
     <body>
         <main>
