--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>
             CSE 110 Lab 2
         </title>
-        <link rel="blank" href="blank.css">
+        <link rel="style" href="style.css">
         <style>
             body {
                 background-color: indigo;
@@ -13,7 +13,7 @@
     </head>
     <body>
         <main>
-           <header> <h1>About Me</h1> </header>
+           <header> <h1> style="color:blue;text-align:center;"> About Me</h1> </header>
             <span> My name is <b>Haaris Waleh</b>. I am a 3rd year Computer Science Major at <i>UCSD.</i> </span>
 
            <div> <h2>My Goals</h2> </div> 
