--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
             body {
                 background-color: indigo;
             }
+            p {color: orange;}
+            p.dbk{display: block;}
+            p.dinline {display: inline;}
         </style>
-        p {color: orange;}
-        p.dbk{display: block;}
-        p.dinline {display: inline;}
+        
     </head>
     <body>
         <main>
-           <header> <h1> style="color:blue;text-align:center;"> About Me</h1> </header>
+           <header> <h1> About Me</h1> </header>
             <span> My name is <p class="dinline">Haaris Waleh</p>. I am a 3rd year Computer Science Major at <i>UCSD.</i> </span>
 
            <div> <h2>My Goals</h2> </div> 
